crates/sdk/tests/macros/error_impl_trait_arg.stderr
error[E0277]: (calimero)> no method named `#[app::init]` found for type `MyState`
 --> tests/macros/error_impl_trait_arg.rs:7:8
  |
7 | struct MyState;
  |        ^^^^^^^ add an `#[app::init]` method to this type
  |
  = help: the trait `AppStateInit` is not implemented for `MyState`
note: required by a bound in `AppState`
 --> src/state.rs
  |
  | pub trait AppState: BorshSerialize + BorshDeserialize + AppStateInit {
  |                                                         ^^^^^^^^^^^^ required by this bound in `AppState`
